2005-12-06 Niklas Knutsson  <nq@altern.org>

	* New assumption type "non-matrix" for unknowns with commutative multiplication
	* Finish isolate x / solve changes

2005-12-06 Niklas Knutsson  <nq@altern.org>

	* Isolate x and solve fixes
	* Fix matrix multiplication

2005-12-04 Niklas Knutsson  <nq@altern.org>

	* Isolate x updates
	* Put AND within OR (to get nicer inequalities)

2005-12-03 Niklas Knutsson  <nq@altern.org>

	* Isolate x using AND and OR instead of vector
	* Enhanced inequalities handling in isolate x
	* Simplify AND and OR with comparisons (ex x < 5 && x < 3 = x < 3)
	* Display "x < 3 && x > 1" as "1 < x < 3"

2005-12-01 Niklas Knutsson  <nq@altern.org>

	* Incorporate ginac sqrfree updates between version 1.2.3 and 1.3.3
	* Assorted fixes

2005-11-30 Niklas Knutsson  <nq@altern.org>

	* Only treat e as E if preceded by number
	* Do not test float number for infinite series
	* Check factorized numerators and denominators for negative powers

2005-11-29 Niklas Knutsson  <nq@altern.org>

	* Parse -x/y as (-x)/y instead of -(x/y)
	* Print multiplication in negation with parentheses when excessive parentheses is on
	* Do not display (x)(y)^z with multiplication sign
	* Sort x^2*y^3 + 10xy - 3x + 8 instead of x^2*y^3 - 3x + 10xy + 8

2005-11-28 Niklas Knutsson  <nq@altern.org>

	* Updated function arguments parsing ignoring space after function name and not stopping parsing of
	  single argument without parentheses until space or right parenthesis without corresponding left parenthesis
	* Be more strict with 0/x if x is not non-zero
	* Fix 1E-1 = 1e-1
	* Calculate as float when 1.0001 > base < 0.9999 and exponent is greater than 10000 or less than -10000

2005-11-27 Niklas Knutsson  <nq@altern.org>

	* Unknown variable with sign non-negative or non-positive represents real number
	* Update assumption type after setting sign and vice versa
	* Assume again when dividing that units do not convert to zero